<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.activity.MainActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
      android:id="@+id/detail_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/double_static_spacing"
      android:layout_margin="@dimen/half_static_spacing"
      app:layout_constraintTop_toTopOf="parent">

      <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_being_inspected"
        android:layout_margin="@dimen/half_static_spacing"/>

      <TextView
        android:id="@+id/image_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_id"
        style="@style/ImageAttribut"/>

      <TextView
        android:id="@+id/image_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_type"
        style="@style/ImageAttribut"/>

      <TextView
        android:id="@+id/image_date_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_created"
        style="@style/ImageAttribut"/>

      <TextView
        android:id="@+id/image_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_url"
        style="@style/ImageAttribut"/>

      <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        style="@style/ImageAttribut"/>

      <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        style="@style/ImageAttribut"/>

      <TextView
        android:id="@+id/azimuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/azimuth"
        style="@style/ImageAttribut"/>

      <TextView
        android:id="@+id/pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pitch"
        style="@style/ImageAttribut"/>

      <TextView
        android:id="@+id/roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        style="@style/ImageAttribut"/>

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>