<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/static_spacing"
  android:orientation="vertical">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/image"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:scaleType="fitCenter"
      android:adjustViewBounds="true"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/title_input_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintWidth_percent=".7"
      android:layout_margin="@dimen/static_spacing"
      tools:ignore="ContentDescription"/>

    <ImageButton
      android:id="@+id/edit_details"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      android:scaleType="fitCenter"
      android:adjustViewBounds="true"
      android:src="@drawable/ic_edit"
      app:layout_constraintTop_toTopOf="@id/image"
      app:layout_constraintEnd_toEndOf="@id/image"
      android:contentDescription="@string/edit_button"/>


    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/title_input_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/image"
      app:layout_constraintBottom_toTopOf="@id/description_input_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/image_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_static_spacing"
        android:hint="@string/image_title"
        android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/description_input_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/title_input_layout"
      app:layout_constraintBottom_toTopOf="@id/tags_input_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_static_spacing"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="3"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tags_input_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/description_input_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <AutoCompleteTextView
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_static_spacing"
        android:hint="@string/add_a_tag"
        android:inputType="textAutoComplete"/>

    </com.google.android.material.textfield.TextInputLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>